--- a/qx.conf
+++ b/qx.conf
@@ -56,7 +56,17 @@ server=114.114.114.114
 #
 [policy]
 ; 策略组命名不能为 direct, proxy, reject，它们都是工具保留的特殊策略组名称
-static=Apple-News, direct
+static=🚀 节点选择, direct, ♻️ 专线, ♻️ 中继
+static=♻️ 中继, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=♻️ 专线, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=Apple-News, 🚀 节点选择, direct, reject
+static=Apple-proxy, 🚀 节点选择, direct, reject
+static=Apple-direct, 🚀 节点选择, direct, reject
+static=CN, 🚀 节点选择, direct, reject
+static=common-ad-keyword, 🚀 节点选择, direct, reject
+static=foreign, 🚀 节点选择, direct, reject
+static=Telegram, 🚀 节点选择, direct, reject
+static=LAN, 🚀 节点选择, direct, reject
 
 #
 # "tag" 和 "enabled" 参数是可选参数
@@ -71,13 +81,13 @@ static=Apple-News, direct
 #
 [filter_remote]
 ; 你可以在需要走代理的节点后使用 force-policy 参数配置你自己定义的策略组（如: force-policy = Apple_Proxy）来覆盖规则集中的代理策略，默认是 proxy.
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-News.list, tag=Apple-News, force-policy=proxy, enabled=false
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-proxy.list, tag=Apple-proxy, force-policy=proxy, enabled=true
+https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-News.list, tag=Apple-News, enabled=false
+https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-proxy.list, tag=Apple-proxy, enabled=true
 https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-direct.list, tag=Apple-direct, enabled=true
 https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/CN.list, tag=CN, enabled=true
 https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/common-ad-keyword.list, tag=common-ad-keyword, enabled=true
 https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/foreign.list, tag=foreign, force-policy=proxy, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/App/social/Telegram.list, tag=Telegram, force-policy=proxy, enabled=true
+https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/App/social/Telegram.list, tag=Telegram, enabled=true
 https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/LAN.list, tag=LAN, enabled=true
 
 #
@@ -152,9 +162,3 @@ final, proxy
 # 为安全起见，请妥善保管 CA 密码和 p12 证书，切勿泄露！
 #
 [mitm]
-;passphrase = 
-;p12 = 
-;skip_validating_cert = true
-;force_sni_domain_name = false
-;hostname = *.example.com, *.sample.com, non-existed-domain.com, *.non-connected-domain.com
-;simple_cert_hostname = non-existed-domain.com, *.non-connected-domain.com
