--- a/qx.conf
+++ b/qx.conf
@@ -47,7 +47,6 @@ server=114.114.114.114
 ;address=/example5.com/192.168.16.18
 ;address=/example6.com/[2001:8d3:8d3:8d3:8d3:8d3:8d3:8d3]
 
-
 #
 # static 策略组会使用你 手动选择 的服务器
 # available 策略组使用第一个通过 server_check_url 测试后可用的服务器 .
@@ -106,8 +105,7 @@ https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/
 ;host-suffix, googleapis.com, proxy
 ;ip6-cidr, 2001:4860:4860::8888/32, direct
 geoip,cn,direct
-final, proxy
-
+final, 🚀 节点选择
 
 #
 # "reject" 策略会返回 HTTP 状态码 404，不附带任何额外内容
@@ -162,4 +160,3 @@ final, proxy
 # 为安全起见，请妥善保管 CA 密码和 p12 证书，切勿泄露！
 #
 [mitm]
-
