--- a/qx.conf
+++ b/qx.conf
@@ -28,7 +28,7 @@ server_check_url=http://www.google.com/generate_204
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
 ;ssid_suspended_list=LINK_22E174, LINK_22E175
 ;udp_whitelist=53, 123, 1900, 80-443
-excluded_routes= 0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
+;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 ;icmp_auto_reply=true
 
 #
@@ -69,17 +69,7 @@ server=8.8.8.8
 ;available=policy-name-6, resource-tag-regex=^sample, server-tag-regex=^example
 ;round-robin=policy-name-7, resource-tag-regex=^sample, server-tag-regex=^example
 ;url-latency-benchmark=policy-name-8, resource-tag-regex=^sample, server-tag-regex=^example, check-interval=600, tolerance=0
-static=🚀 节点选择, direct, ♻️ 专线, ♻️ 中继
-static=♻️ 中继, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
-static=♻️ 专线, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
-static=Apple-News, 🚀 节点选择, direct, reject
-static=Apple-proxy, 🚀 节点选择, direct, reject
-static=Apple-direct, 🚀 节点选择, direct, reject
-static=CN, 🚀 节点选择, direct, reject
-static=common-ad-keyword, 🚀 节点选择, direct, reject
-static=foreign, 🚀 节点选择, direct, reject
-static=Telegram, 🚀 节点选择, direct, reject
-static=LAN, 🚀 节点选择, direct, reject
+
 #
 # Params "tag" and "enabled" are optional.
 # The default sync interval for all kinds of remote resources is 86400 seconds.
@@ -97,21 +87,12 @@ static=LAN, 🚀 节点选择, direct, reject
 #
 [filter_remote]
 ;https://raw.githubusercontent.com/crossutility/Quantumult-X/master/filter.txt, tag=Sample, force-policy=your-policy-name, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-News.list, tag=Apple-News, enabled=false
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-proxy.list, tag=Apple-proxy, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/Apple-direct.list, tag=Apple-direct, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/CN.list, tag=CN, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/common-ad-keyword.list, tag=common-ad-keyword, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/foreign.list, tag=foreign, force-policy=proxy, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/App/social/Telegram.list, tag=Telegram, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/Basic/LAN.list, tag=LAN, enabled=true
 
 #
 # Params "tag" and "enabled" are optional.
 #
 [rewrite_remote]
 ;https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-import-rewrite.txt, tag=Sample, enabled=true
-https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Quantumult/rewrite.list, tag=Hackl0us, enabled=true
 
 #
 # Only obfs=http, obfs=ws, obfs=wss can have optional "obfs-uri" field.
@@ -168,7 +149,7 @@ ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 224.0.0.0/24, direct
 geoip, cn, direct
-final, 🚀 节点选择
+final, proxy
 
 
 #
