--- a/qx.conf
+++ b/qx.conf
@@ -12,8 +12,8 @@ server=8.8.8.8
 
 [policy]
 static=🚀 节点选择, direct, ♻️ 专线, ♻️ 中继
-static=♻️ 中继, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
-static=♻️ 专线, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+url-latency-benchmark=♻️ 中继, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+url-latency-benchmark=♻️ 专线, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
 
 static=🌍 国外媒体, 🚀 节点选择, direct, reject, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/GlobalMedia.png
 static=📲 电报信息, 🚀 节点选择, direct, reject, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
