--- a/qx.conf
+++ b/qx.conf
@@ -21,7 +21,7 @@ static=Ⓜ️ 微软服务, 🚀 节点选择, direct, reject, img-url=https://r
 static=🍎 苹果服务, 🚀 节点选择, direct, reject, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
 static=📢 谷歌FCM, 🚀 节点选择, direct, reject
 static=🎯 全球直连, DIRECT, 🚀 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Direct.png
-static=🐟 漏网之鱼, 🚀 节点选择, 🎯 全球直连, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
+# static=🐟 漏网之鱼, 🚀 节点选择, 🎯 全球直连, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 
 [server_remote]
 
@@ -48,7 +48,7 @@ ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 224.0.0.0/24, direct
 GEOIP,CN,🎯 全球直连
-FINAL,🐟 漏网之鱼
+FINAL,🚀 节点选择
 
 [rewrite_local]
 
