--- a/qx.conf
+++ b/qx.conf
@@ -11,15 +11,18 @@ server=1.0.0.1
 server=8.8.8.8
 
 [policy]
-static=🚀 节点选择, ♻️ 自动选择, DIRECT, 
-available=♻️ 自动选择, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
-static=🌍 国外媒体, 🚀 节点选择, ♻️ 自动选择, 🎯 全球直连, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/GlobalMedia.png
+static=🚀 节点选择, ♻️ 专线(自动), ♻️ 中继(自动), ♻️ 专线, ♻️ 中继, DIRECT
+static=♻️ 专线(自动), DIRECT, check-interval=600, tolerance=16, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=♻️ 中继(自动), DIRECT, check-interval=600, tolerance=16, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=♻️ 专线, DIRECT, check-interval=600, tolerance=16, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=♻️ 中继, DIRECT, check-interval=600, tolerance=16, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=🌍 国外媒体, 🚀 节点选择, ♻️ 专线, 🎯 全球直连, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/GlobalMedia.png
 static=📲 电报信息, 🚀 节点选择, 🎯 全球直连, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
 static=Ⓜ️ 微软服务, 🎯 全球直连, 🚀 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Microsoft.png
 static=🍎 苹果服务, 🚀 节点选择, 🎯 全球直连, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
-static=📢 谷歌FCM, 🚀 节点选择, 🎯 全球直连, ♻️ 自动选择
-static=🎯 全球直连, DIRECT, 🚀 节点选择, ♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Direct.png
-#static=🐟 漏网之鱼, 🚀 节点选择, 🎯 全球直连, ♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
+static=📢 谷歌FCM, 🚀 节点选择, 🎯 全球直连, ♻️ 专线
+static=🎯 全球直连, DIRECT, 🚀 节点选择, ♻️ 专线, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Direct.png
+static=🐟 漏网之鱼, 🚀 节点选择, 🎯 全球直连, ♻️ 专线, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 
 [server_remote]
 
@@ -41,9 +44,8 @@ https://subcon.dlj.tf/getruleset?type=2&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRl
 
 [filter_local]
 GEOIP,CN,🎯 全球直连
-#FINAL,🐟 漏网之鱼
+FINAL,🐟 漏网之鱼
 
 [rewrite_local]
 
 [mitm]
-
